; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_stack.c_get_frame_language.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_stack.c_get_frame_language.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symtab = type { i32 }

@deprecated_selected_frame = common dso_local global i64 0, align 8
@language_unknown = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_frame_language() #0 {
  %1 = alloca %struct.symtab*, align 8
  %2 = alloca i32, align 4
  %3 = load i64, i64* @deprecated_selected_frame, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %18

5:                                                ; preds = %0
  %6 = load i64, i64* @deprecated_selected_frame, align 8
  %7 = call i32 @get_frame_address_in_block(i64 %6)
  %8 = call %struct.symtab* @find_pc_symtab(i32 %7)
  store %struct.symtab* %8, %struct.symtab** %1, align 8
  %9 = load %struct.symtab*, %struct.symtab** %1, align 8
  %10 = icmp ne %struct.symtab* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %5
  %12 = load %struct.symtab*, %struct.symtab** %1, align 8
  %13 = getelementptr inbounds %struct.symtab, %struct.symtab* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %2, align 4
  br label %17

15:                                               ; preds = %5
  %16 = load i32, i32* @language_unknown, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %11
  br label %20

18:                                               ; preds = %0
  %19 = load i32, i32* @language_unknown, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %18, %17
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local %struct.symtab* @find_pc_symtab(i32) #1

declare dso_local i32 @get_frame_address_in_block(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
